--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ sqlalchemy = "^2.0.36"
 pydantic = "^2.9.2"
 pydantic-settings = "^2.6.0"
 python-telegram-bot = {extras = ["all"], version = "^21.6"}
+alembic = "^1.13.3"
 
 
 [build-system]
