--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^2.9.2"
 pydantic-settings = "^2.6.0"
 python-telegram-bot = {extras = ["all"], version = "^21.6"}
 alembic = "^1.13.3"
+loguru = "^0.7.2"
 
 
 [build-system]
