--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MODE=
 POSTGRES_DSN=
 MAXIMUM_TORRENTS_TO_SEND=
 TELEGRAM_BOT_TOKEN=
+QBITTORRENT_CLIENT_DSN=
+QBITTORRENT_AUTH_USER=
+QBITTORRENT_AUTH_PASS=
