--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@ MODE=
 POSTGRES_DSN=
 MAXIMUM_TORRENTS_TO_SEND=
 TELEGRAM_BOT_TOKEN=
+TELEGRAM_REPO_BOT_TOKEN=
+TELEGRAM_REPO_CHAT_ID=
 QBITTORRENT_CLIENT_DSN=
 QBITTORRENT_AUTH_USER=
 QBITTORRENT_AUTH_PASS=
+QBIT_SAVEPATH=
+HOST_SAVEPATH=
 FILES_PER_PAGE=
