--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ MAXIMUM_TORRENTS_TO_SEND=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_REPO_BOT_TOKEN=
 TELEGRAM_REPO_CHAT_ID=
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
 QBITTORRENT_CLIENT_DSN=
 QBITTORRENT_AUTH_USER=
 QBITTORRENT_AUTH_PASS=
