More many changes

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@ MODE=
 POSTGRES_DSN=
 MAXIMUM_TORRENTS_TO_SEND=
 TELEGRAM_BOT_TOKEN=
-TELEGRAM_REPO_BOT_TOKEN=
-TELEGRAM_REPO_CHAT_ID=
 TELEGRAM_API_ID=
 TELEGRAM_API_HASH=
 QBITTORRENT_CLIENT_DSN=
@@ -12,3 +10,4 @@ QBITTORRENT_AUTH_PASS=
 QBIT_SAVEPATH=
 HOST_SAVEPATH=
 FILES_PER_PAGE=
+MAXIMUM_TORRENTS_SIZE=
